Change app title to Guess The নেতা

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
         <script type="text/javascript"
           src="//www.highperformanceformat.com/6076973c857f28e285dc9f8d6fe59332/invoke.js"></script>
       </div>
-      <h1 class="glow-text">গেস দ্য নেতা</h1>
+      <h1 class="glow-text">Guess The নেতা</h1>
       <div id="roomInfo"></div>
     </header>
 
