Fix WebRTC audio: robust track handling, unmuted remote audio, and added Fix Audio button

--- a/client/index.html
+++ b/client/index.html
@@ -116,6 +116,7 @@
                 <button id="endCallBtn" class="danger">কল কাটুন</button>
                 <button id="muteMicBtn">মিউট</button>
                 <button id="muteCamBtn">ভিডিও বন্ধ</button>
+                <button id="fixAudioBtn" class="btn-fix">অডিও ঠিক করুন</button>
               </div>
             </div>
           </div>
