Add 30-second turn reminder: অপর পক্ষকে সুযোগ দিন

--- a/client/index.html
+++ b/client/index.html
@@ -55,6 +55,7 @@
         <div class="game-main">
           <div class="topbar-glass">
             <div id="status" class="status-badge"></div>
+            <div id="turnReminder" class="floating-reminder hidden">অপর পক্ষকে সুযোগ দিন</div>
             <div class="game-controls">
               <button id="endTurnBtn" class="btn-small">চাল শেষ</button>
               <button id="guessModeBtn" class="btn-small highlight">নেতা গেস করুন</button>
