Added floating 'Your Turn' notification with premium animation

--- a/client/index.html
+++ b/client/index.html
@@ -148,6 +148,8 @@
       </div>
     </div>
     </section>
+    <!-- Turn Notification Popup -->
+    <div id="turnPopup" class="turn-popup hidden">আপনার চাল</div>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
